Main section added

--- a/index.html
+++ b/index.html
@@ -8,11 +8,25 @@
     <link rel="stylesheet" href="resources/css/style.css">
 </head>
 <body>
-    <div class="head-container">
-        <h1>Discover hidden places in the world around you</h1>
-    </div>
-    <div class="link-container">
-        <a href="#">Download Excursion (Coming soon!)</a>
-    </div>
+ <!-- Main Section -->
+ <h1 class="header">Discover hidden places in the world around you</h1> 
+ <p><a href="#">Download Excursion (Coming soon!)</a></p>
+ <video autoplay muted loop><source src="/resources/videos/excursion.mp4" type="video/mp4">Your web browser does not support the video tag.</video>
+
+ <!-- First support section -->
+ <!-- <h2>Your personal travel guide</h2>       
+ <p class="fss">Excursion remembers places you like, and recommends new points of interest around you.</p>
+ <p><img src="/resources/images/camp.jpeg" alt="camp image"></p> -->
+  
+ <!-- Second support section -->
+ <!-- <img src="/resources/images/phone.png" alt="white phone image">
+ <h2>Coming Soon for iPhone and Android</h2>
+ <p><a href="#">Download Excursion (Coming soon!)</a></p> -->
+
+ <!-- Footer -->
+ <!-- <div class="footer">
+    <p>&copy;Excursion</p>
+ </div> -->
+   
 </body>
 </html>
