First section added

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
  <video autoplay muted loop><source src="/resources/videos/excursion.mp4" type="video/mp4">Your web browser does not support the video tag.</video>
 
  <!-- First support section -->
- <!-- <h2>Your personal travel guide</h2>       
+ <h2>Your personal travel guide</h2>       
  <p class="fss">Excursion remembers places you like, and recommends new points of interest around you.</p>
- <p><img src="/resources/images/camp.jpeg" alt="camp image"></p> -->
+ <p><img src="/resources/images/camp.jpeg" alt="camp image"></p>
   
  <!-- Second support section -->
  <!-- <img src="/resources/images/phone.png" alt="white phone image">
