Second section added

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
  <p><img src="/resources/images/camp.jpeg" alt="camp image"></p>
   
  <!-- Second support section -->
- <!-- <img src="/resources/images/phone.png" alt="white phone image">
+ <img src="/resources/images/phone.png" alt="white phone image">
  <h2>Coming Soon for iPhone and Android</h2>
- <p><a href="#">Download Excursion (Coming soon!)</a></p> -->
+ <p><a href="#">Download Excursion (Coming soon!)</a></p>
 
  <!-- Footer -->
  <!-- <div class="footer">
