Footer section added

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
  <p><a href="#">Download Excursion (Coming soon!)</a></p>
 
  <!-- Footer -->
- <!-- <div class="footer">
+ <div class="footer">
     <p>&copy;Excursion</p>
- </div> -->
+ </div>
    
 </body>
 </html>
